MDEV-4817: Optimizer fails to optimize expression of the form 'FOO' IS NULL - Modify the way Item_cond::fix_fields() and Item_cond::eval_not_null_tables()   calculate bitmap for Item_cond_or::not_null_tables():   if they see a "... OR inexpensive_const_false_item OR ..." then the item can   be ignored. - Updated test results. There can be more warnings produced since parts of WHERE   are evaluated more times.